@@ -4,21 +4,4 @@ D:EQ:({r1},{}):({})
 D:EQ:({},{}):({})
 D:EQ:({r2},{r1}):({a})
 D:EQ:({r1},{r2}):({b})
-E:({},{})
-E:({r1},{})
-E:({r2},{})
-E:({r1,r2},{})
-E:({},{r1})
-E:({r1},{r1})
-E:({r2},{r1})
-E:({r1,r2},{r1})
-E:({},{r2})
-E:({r1},{r2})
-E:({r2},{r2})
-E:({r1,r2},{r2})
-E:({},{r1,r2})
-E:({r1},{r1,r2})
-E:({r2},{r1,r2})
-E:({r1,r2},{r1,r2})
-Em:({},{})
 Dm:EQ:({},{}):({})
