@@ -1,16 +1,0 @@
-E:({},{})
-E:({r1},{})
-E:({r2},{})
-E:({r1,r2},{})
-E:({},{r1})
-E:({r1},{r1})
-E:({r2},{r1})
-E:({r1,r2},{r1})
-E:({},{r2})
-E:({r1},{r2})
-E:({r2},{r2})
-E:({r1,r2},{r2})
-E:({},{r1,r2})
-E:({r1},{r1,r2})
-E:({r2},{r1,r2})
-E:({r1,r2},{r1,r2})
